// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/Icons should return appropriate icon based on name = "hem" 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "accept": "#0AC238",
        "border": "#EBEAFA",
        "deny": "#FF5374",
        "icon": Object {
          "arrowRight": "#81A1B1",
        },
        "inactive": "#E0E7EB",
        "lightGrey": "#EAEAF1",
        "loading": "#81A1B1",
        "primary": "#0099E5",
        "quiet": "#F7F8F8",
        "shadow": "grey",
        "text": Object {
          "pre": "#81A1B1",
          "primary": "#454F54",
        },
        "white": "#FFFFFF",
      },
      "fontSize": Object {
        "large": "48px",
        "medium": "32px",
        "regular": "18px",
        "regularMedium": "24px",
        "small": "14px",
      },
      "sizes": Object {
        "borderRadius": Object {
          "small": 5,
        },
        "elevation": 6,
      },
      "spacing": Object {
        "large": "48px",
        "medium": "24px",
        "small": "12px",
      },
      "typography": Object {
        "bold": "Karla-Bold",
        "contrast": "Rubik-Medium",
        "regular": "Karla-Regular",
      },
    }
  }
>
  <NavbarIcon
    name="hem"
  />
</ThemeProvider>
`;

exports[`elements/Icons should return appropriate icon based on name = "konto" 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "accept": "#0AC238",
        "border": "#EBEAFA",
        "deny": "#FF5374",
        "icon": Object {
          "arrowRight": "#81A1B1",
        },
        "inactive": "#E0E7EB",
        "lightGrey": "#EAEAF1",
        "loading": "#81A1B1",
        "primary": "#0099E5",
        "quiet": "#F7F8F8",
        "shadow": "grey",
        "text": Object {
          "pre": "#81A1B1",
          "primary": "#454F54",
        },
        "white": "#FFFFFF",
      },
      "fontSize": Object {
        "large": "48px",
        "medium": "32px",
        "regular": "18px",
        "regularMedium": "24px",
        "small": "14px",
      },
      "sizes": Object {
        "borderRadius": Object {
          "small": 5,
        },
        "elevation": 6,
      },
      "spacing": Object {
        "large": "48px",
        "medium": "24px",
        "small": "12px",
      },
      "typography": Object {
        "bold": "Karla-Bold",
        "contrast": "Rubik-Medium",
        "regular": "Karla-Regular",
      },
    }
  }
>
  <NavbarIcon
    name="konto"
  />
</ThemeProvider>
`;

exports[`elements/Icons should return appropriate icon based on name = "qr-kod" 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "accept": "#0AC238",
        "border": "#EBEAFA",
        "deny": "#FF5374",
        "icon": Object {
          "arrowRight": "#81A1B1",
        },
        "inactive": "#E0E7EB",
        "lightGrey": "#EAEAF1",
        "loading": "#81A1B1",
        "primary": "#0099E5",
        "quiet": "#F7F8F8",
        "shadow": "grey",
        "text": Object {
          "pre": "#81A1B1",
          "primary": "#454F54",
        },
        "white": "#FFFFFF",
      },
      "fontSize": Object {
        "large": "48px",
        "medium": "32px",
        "regular": "18px",
        "regularMedium": "24px",
        "small": "14px",
      },
      "sizes": Object {
        "borderRadius": Object {
          "small": 5,
        },
        "elevation": 6,
      },
      "spacing": Object {
        "large": "48px",
        "medium": "24px",
        "small": "12px",
      },
      "typography": Object {
        "bold": "Karla-Bold",
        "contrast": "Rubik-Medium",
        "regular": "Karla-Regular",
      },
    }
  }
>
  <NavbarIcon
    name="qr-kod"
  />
</ThemeProvider>
`;
